force-app/main/default/objects/Movie_Review__c/Movie_Review__c.object-meta.xml
<CustomObject>
    <label>Movie Review</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movie Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>