force-app/main/default/objects/Movie_Review__c/fields/Movie_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Movie_Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie Portal User</label>
    <referenceTo>Movie_Portal_User__c</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>