force-app/main/default/objects/Movie_Review__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>