force-app/main/default/objects/Movie_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Movie__c</columns>
    <columns>Title__c</columns>
    <columns>Body__c</columns>
    <columns>Movie_Portal_User__c</columns>
    <columns>RecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>